增加補花BDD